# flagops-data-store-openfeature-provider-python

./: pyproject.toml
flagops_openfeature/: provider.py
